评论区更改了取消回复链接的位置和可访问性优化
1. comment-input.php 更改了取消回复链接的位置
2. app.js 更改了取消回复链接的样式
3. app.js 加入了取消回复链接按下 tab 让评论内容输入框获取焦点，可以避免键盘切出评论表单区
4. style.scss 调整了回复表单区底部的 margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -861,6 +861,9 @@
 #comments .comments-lists .comment-children .comment-children {
   margin-left: 0;
 }
+#comments .comments-lists .comment-input {
+  margin-bottom: 20px;
+}
 
 .archive-page .archives {
   position: relative;
