加入了章节目录跳转功能
1. functions.php 加入了章节目录设置
2. functions.php 加入了两个用来生成章节目录的函数
3. post.php 文章页加入了章节目录显示
4. style.scss 加入了章节目录的样式
5. app.js 加入了章节目录跳转
6. options-panel.js 更改了设置分类标题的插入位置

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,13 @@
 .post-page .post-title a:focus {
   color: #D0220F;
 }
+.post-page article #directory-box {
+  background: #F8F9FA;
+  display: inline-block;
+}
+.post-page article #directory-box .directory-num {
+  color: #212529;
+}
 .post-page article .post-content p, .post-page article .post-content li, .post-page article .post-content a {
   font-size: 16px;
 }
@@ -1107,6 +1114,12 @@
 }
 .dark-color .sidebar .latest-comment p {
   color: #F5F5F5;
+}
+.dark-color #directory-box {
+  background: #343A40 !important;
+}
+.dark-color #directory-box .directory-num {
+  color: #F5F5F5 !important;
 }
 .dark-color .post-page .post-content p {
   color: #F5F5F5;
