加入了单篇文章的章节目录显示设置和调整了章节目录列表的样式
1. style.scss 调整了章节目录的列表样式
2. functions.php 中加入了单篇文章的章节目录显示设置
3. functions.php 中加入了一个用来获取章节目录显示设置的函数
4. functions.php 章节目录显示设置默认值改为在第一个章节标题前显示目录
5. post.php 更改了章节目录设置的获取方式
6. page.php 独立页面加入了章节目录显示

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -433,8 +433,17 @@
   background: #F8F9FA;
   display: inline-block;
 }
-.post-page article #directory-box .directory-num {
+.post-page article #directory-box ul {
+  list-style: none;
+}
+.post-page article #directory-box ul .directory-num {
   color: #212529;
+}
+.post-page article #directory-box > ul {
+  padding-left: 0;
+}
+.post-page article #directory-box > ul ul {
+  padding-left: 32px;
 }
 .post-page article .post-content p, .post-page article .post-content li, .post-page article .post-content a {
   font-size: 16px;
