加入了图片懒加载功能
1. functions.php 加入了图片懒加载开关和替换 src 的函数
2. style.scss 加入了待加载的图片样式
3. app.js 加入了图片懒加载功能

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,6 +536,12 @@ header input[type=search]:focus {
 .post-page article .post-content table td, .post-page article .post-content table th {
   min-width: 90px;
 }
+.post-page article .post-content .load-img {
+  width: 100%;
+  height: 380px;
+  display: block;
+  background-color: #E0E0E0;
+}
 .post-page .category-tag .post-category {
   display: flex;
   align-items: center;
@@ -1016,6 +1022,10 @@ header input[type=search]:focus {
   }
   #comments #emoji-panel {
     width: 93% !important;
+  }
+
+  .load-img {
+    height: 200px !important;
   }
 }
 .light-color {
