侧边栏加入了章节目录和博客信息组件
1. dark-color.scss 和 style.scss 加入了博客信息和目录组件的样式
2. fonts 字体图标新增一个图标
3. app.js 加入了章节目录的跳转和定位代码
4. functions.php 加入了侧边栏博客信息的相关表单
5. functions.php 加入了文章页侧边栏的组件显示和排序设置
6. functions.php 删除了章节目录和单篇文章的章节目录设置
7. functions.php 加入了用于获取管理员信息和获取 Gravatar 头像的函数
8. options-panel.js 调整了设置分类标题的插入位置
9. post.php 和 page.php 删除了章节目录显示
10. sidebar.php 加入了博客信息和章节目录组件

--- a/assets/css/dark-color.scss
+++ b/assets/css/dark-color.scss
@@ -295,6 +295,7 @@ $dark-text-color2: #999999;
 
   // 侧边栏配色
   .sidebar {
+    // 侧边栏通用列表配色
     section {
       > h2 {
         color: $dark-text-color;
@@ -304,13 +305,25 @@ $dark-text-color2: #999999;
         color: $dark-text-color;
       }
     }
-
+    // 切换配色模式区域
     .change-color label {
       color: $dark-text-color;
     }
-
+    // 最新评论区域
     .latest-comment p {
       color: $dark-text-color;
+    }
+    // 博客信息区域
+    .blog-info {
+      a {
+        color: $dark-link-color;
+      }
+      p {
+        color: $dark-text-color;
+      }
+      hr {
+        background: #CCCCCC;
+      }
     }
   }
 
