--- a/assets/css/icon.css
+++ b/assets/css/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?81ffza');
-  src:  url('../fonts/icomoon.eot?81ffza#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?81ffza') format('truetype'),
-    url('../fonts/icomoon.woff?81ffza') format('woff'),
-    url('../fonts/icomoon.svg?81ffza#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?qfbbpl');
+  src:  url('../fonts/icomoon.eot?qfbbpl#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?qfbbpl') format('truetype'),
+    url('../fonts/icomoon.woff?qfbbpl') format('woff'),
+    url('../fonts/icomoon.svg?qfbbpl#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,17 +25,20 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-chevron-right:before {
+.icon-qzone-logo:before {
   content: "\e900";
 }
-.icon-chevron-left:before {
+.icon-award:before {
   content: "\e901";
 }
 .icon-thumbs-up:before {
   content: "\e902";
 }
-.icon-qzone-logo:before {
+.icon-chevron-left:before {
   content: "\e903";
+}
+.icon-chevron-right:before {
+  content: "\e904";
 }
 .icon-pencil:before {
   content: "\e905";
