--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,6 +360,9 @@ header input[type=search]:focus {
   opacity: 0.7;
 }
 
+.sidebar {
+  position: relative;
+}
 .sidebar section h2 {
   font-size: 12px;
   font-weight: 700;
@@ -389,6 +392,44 @@ header input[type=search]:focus {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.sidebar .directory {
+  overflow-y: auto;
+}
+.sidebar .directory::-webkit-scrollbar {
+  width: 6px;
+  background: #F1F1F1;
+}
+.sidebar .directory::-webkit-scrollbar-thumb {
+  background: #A8A8A8;
+}
+.sidebar .directory > .article-directory {
+  width: 100%;
+}
+.sidebar .directory > .article-directory .article-directory {
+  margin-left: 16px;
+}
+.sidebar .blog-info .blog-user-info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.sidebar .blog-info .blog-user-info .avatar {
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  flex: none;
+}
+.sidebar .blog-info .blog-user-info .pingback {
+  font-size: 20px;
+  line-height: 56px;
+}
+.sidebar .blog-info .statistics p {
+  font-size: 16px;
+  margin: 0;
+  color: #333333;
+  display: flex;
+  align-items: center;
 }
 
 .archive-title h1 {
@@ -1608,6 +1649,15 @@ header input[type=search]:focus {
 .dark-color .sidebar .latest-comment p {
   color: #D3D3D3;
 }
+.dark-color .sidebar .blog-info a {
+  color: #E47063;
+}
+.dark-color .sidebar .blog-info p {
+  color: #D3D3D3;
+}
+.dark-color .sidebar .blog-info hr {
+  background: #CCCCCC;
+}
 .dark-color #directory-box {
   background: #16161A !important;
 }
@@ -2021,6 +2071,15 @@ header input[type=search]:focus {
   }
   .auto-color .sidebar .latest-comment p {
     color: #D3D3D3;
+  }
+  .auto-color .sidebar .blog-info a {
+    color: #E47063;
+  }
+  .auto-color .sidebar .blog-info p {
+    color: #D3D3D3;
+  }
+  .auto-color .sidebar .blog-info hr {
+    background: #CCCCCC;
   }
   .auto-color #directory-box {
     background: #16161A !important;
